@@ -27,38 +27,6 @@
 # (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 # OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
-class PatchCollection:
-    def __init__(self, bugs, filter=None):
-        self._bugs = bugs
-        self._filter = filter
-        self._patches = []
-
-    def add(self, patch):
-        self.add_patches([patch])
-
-    def add_patches(self, patches):
-        for patch in patches:
-            if not patch:
-                continue
-            if self._filter and not self._filter(patch):
-                continue
-            self._patches.append(patch)
-
-    def add_patches_from_bug(self, bug_id):
-        self.add_patches(self._bugs.fetch_patches_from_bug(bug_id))
-
-    def next(self):
-        if not self._patches:
-            return None
-        return self._patches.pop(0)
-
-    def patch_ids(self):
-        return map(lambda patch: patch['id'], self._patches)
-
-    def __len__(self):
-        return len(self._patches)
-
-
 class PersistentPatchCollectionDelegate:
     def collection_name(self):
         raise NotImplementedError, "subclasses must implement"
